fix vertical align issues

--- a/resources/style.css
+++ b/resources/style.css
@@ -68,12 +68,10 @@ body {
 }
 
 .preview-placeholder {
-  background-color  : white;
-  padding           : 20px;
-  height            : 100%;
-  width             : 100%;
-  text-align        : center;
-  box-sizing        : border-box;
+  background-color : white;
+  padding          : 20px;
+  height           : 100%;
+  width            : 100%;
 }
 
 .file-thumb,
@@ -83,11 +81,13 @@ body {
   box-shadow        : inset 1px 1px 0 rgba(0, 0, 0, 0.1);
   border-radius     : 5px;
   padding           : 10px;
-  position          : relative;
+  position          : absolute;
   top               : 50%;
-  transform         : translateY(-50%);
-  -webkit-transform : translateY(-50%);
-  -ms-transform     : translateY(-50%);
+  left              : 50%;
+
+  transform         : translate(-50%, -50%);
+  -webkit-transform : translate(-50%, -50%);
+  -ms-transform     : translate(-50%, -50%);
 
   max-width         : 100%;
   max-height        : 100%;
@@ -104,9 +104,11 @@ body {
   padding           : 10px;
   position          : relative;
   top               : 50%;
-  transform         : translateY(-50%);
-  -webkit-transform : translateY(-50%);
-  -ms-transform     : translateY(-50%);
+  left              : 50%;
+
+  transform         : translate(-50%, -50%);
+  -webkit-transform : translate(-50%, -50%);
+  -ms-transform     : translate(-50%, -50%);
 
   max-width         : 100%;
   max-height        : 100%;
